--- a/src/components/cardCounter/card-counter.css
+++ b/src/components/cardCounter/card-counter.css
@@ -3,7 +3,7 @@
     justify-content: flex-end;
     height: fit-content;
     position: sticky;
-    top: 18rem;
+    top: 180px;
 }
 
 .card-counter {
