--- a/src/components/collectionAll/collection-all.css
+++ b/src/components/collectionAll/collection-all.css
@@ -1,7 +1,7 @@
 .collection-container {
     display: grid;
     grid-template-columns: repeat(4, 1fr); 
-    gap: 6rem;
+    gap: 60px;
     justify-items: center; 
     padding: 0 84px;
   }
@@ -18,7 +18,7 @@
 .collection-page {
     display: flex;
     flex-direction: row;
-    margin-top: 6rem;
+    margin-top: 60px;
     justify-content: space-between;
     padding: 0;
     position: relative;
@@ -29,9 +29,9 @@
     display: flex;
     flex-direction: column;
     gap: 32px;
-    padding-left: 20rem;
+    padding-left: 200px;
     position: sticky;
-    top: 23rem;
+    top: 230px;
     height: fit-content;
-    margin-top: 5rem;
+    margin-top: 50px;
 }
