--- a/src/components/searchBar/search-bar.css
+++ b/src/components/searchBar/search-bar.css
@@ -24,8 +24,8 @@
     text-transform: uppercase;
     cursor: pointer;
     height: 48px;
-    padding: 0 6rem;
-    width: 56.8rem;
+    padding: 0 60px;
+    width: 568px;
 }
 
 .search-bar.outlined::before {
