--- a/src/components/hyrule-card/hyruleCard.css
+++ b/src/components/hyrule-card/hyruleCard.css
@@ -190,13 +190,6 @@
     margin-bottom: 0.15rem;
 }
 
-/* Library */
-
-.card--library {
-    filter: grayscale(100%) brightness(0.8);
-    opacity: 0.7;
-    pointer-events: none;
-  }
 
   /* size */
 
@@ -214,8 +207,25 @@
 /* disableclick */
 
 .card--disabled {
-  pointer-events: none;
-  cursor: default;
-  opacity: 0.7;
+  /* pointer-events: none; */
+  cursor: pointer;
+  /* opacity: 0.7; */
 }
+
+/* isDiscovered */
+
+.collection-page .hidden-card .hyrule-card {
+    display: none;
+}
+
+
+.collection-page .hidden-card {
+    background-image: url('../../assets/backgrounds/no-available-card.png');
+    background-repeat: repeat-y;
+    background-size: auto 100%;
+    background-position: left top;
+    border-radius: 0;
+    pointer-events: none !important;
+}
+
 
