--- a/src/components/button/button.css
+++ b/src/components/button/button.css
@@ -94,6 +94,17 @@
     }
 }
 
+
+
+@media (min-width: 769px) and (max-width: 1439px) {
+    .button.lg {
+        height: 58px;
+        padding: 0 12px;
+        font-size: 20px;
+        min-width: 240px;
+    }
+}
+
 /* Primary */
 
 .button.primary {
