--- a/src/components/firebase/register/registerForm.css
+++ b/src/components/firebase/register/registerForm.css
@@ -31,12 +31,11 @@
   .register-form {
     padding: 20px;
     border-radius: 8px;
-    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
     width: 300px;
     display: flex;
     flex-direction: column;
     gap: 15px;
-    border: 1px solid white;
+    align-items: center;
 }
   
   .register-form label {
@@ -45,17 +44,29 @@
     font-weight: 500;
     color: white;
   }
-  
-  .register-form input {
-    padding: 10px;
-    border: 1px solid #ccc;
-    border-radius: 4px;
-    font-size: 16px;
-  }
-   
+    
   .error-message {
     color: red;
     font-size: 0.9rem;
     margin-bottom: 1rem;
     text-align: center;
+  }
+
+  .register-input {
+    width: auto;
+  }
+
+  .button-register {
+    margin-top: 26px;
+  }
+
+  .register-input-content {
+    display: flex;
+    flex-direction: column;
+    gap: 28px;;
+  }
+
+  .register-form-container {
+    display: flex;
+    justify-content: center;
   }
