--- a/src/components/firebase/user-profile/UserProfileEditor.module.css
+++ b/src/components/firebase/user-profile/UserProfileEditor.module.css
@@ -5,7 +5,7 @@
   align-items: center;
   padding-top: 48px; /* distancia desde el header */
   min-height: 100vh;
-  /*gap: 32px; /* separación general entre bloques si lo deseas */
+  gap: 20px; /* separación general entre bloques si lo deseas */
 }
 
 /*===IMAGEN PERFIL USUARIO===*/
