--- a/src/components/modalCard/modal-card.css
+++ b/src/components/modalCard/modal-card.css
@@ -18,6 +18,11 @@
   padding: 16px;
 }
 
+.modal-content h2 {
+  display: flex;
+  margin-top: 4px;
+}
+
 .modal-description {
   font-size: 16px;
   color: white;
