--- a/src/components/searchBar/search-bar.css
+++ b/src/components/searchBar/search-bar.css
@@ -25,8 +25,16 @@
     cursor: pointer;
     height: 48px;
     padding: 0 60px;
-    width: 568px;
+    min-width: 160px;
+    max-width: 568px;
+    flex: 1;
 }
+
+   @media (min-width: 769px) and (max-width: 1439px) {
+        .search-bar {
+            max-width: 230px;
+        }
+    }
 
 .search-bar.outlined::before {
     background-image: none;
