feat: new function, deck preview, edit decks

--- a/src/components/hyrule-card/hyruleCard.css
+++ b/src/components/hyrule-card/hyruleCard.css
@@ -34,13 +34,14 @@
 }
 
 .hyrule-card {
+    position: relative;
     box-sizing: border-box;
     display: flex;
     flex-direction: column;
     justify-content: center;
     color: #f5e5c0;
     /* border: 0.38rem solid #E0CEA0; */
-    width: 300px;
+    width: 100%;
     padding-block: 0.3rem;
     border-radius: 0.5rem;  
     width: 14.24rem;
