--- a/src/views/collection/DecksPage.css
+++ b/src/views/collection/DecksPage.css
@@ -9,28 +9,34 @@
   
   /* Cada bloque individual de mazo */
   .deck-preview {
-    background: #f8f8f8;
-    border: 1px solid #ddd;
-    border-radius: 10px;
+    cursor: pointer;
+    text-align: center;
+    margin: 1rem;
+    background: #101422c2;
+    border: 1px solid #dddddd00;
+    border-radius: 6px;
     overflow: hidden;
     text-align: center;
     padding: 0.5rem;
     transition: box-shadow 0.2s ease;
     box-shadow: 0 1px 5px rgba(0, 0, 0, 0.1);
+    transition: transform 0.3s ease-in-out;
     width: 15rem;
     height: 23.5rem;
   }
   
-  .deck-preview:hover {
-    box-shadow: 0 4px 12px rgba(0, 0, 0, 0.2);
-  }
+.deck-preview:hover {
+    box-shadow: 0 5px 13px rgba(0, 0, 0, 0.2);
+    transform: scale(1.1);
+}
   
   /* Imagen principal del mazo */
   .deck-image img {
+    aspect-ratio: 10 / 14;
     width: 100%;
     height: 180px;
     object-fit: cover;
-    border-radius: 8px;
+    border-radius: 6px;
   }
   
   /* Nombre del mazo debajo de la imagen */
