--- a/src/components/header/header.css
+++ b/src/components/header/header.css
@@ -1,27 +1,33 @@
 header {
-  display: flex;
-  justify-content: space-between;
+  display: grid;
+  grid-template-columns: 1fr 3fr;
   align-items: center;
   padding: 25px 80px;
   background: rgba(39, 88, 128, 0.1); 
   position: relative;
+  gap: 6px;
 }
- 
+
 .header-logo {
-  font-size: 36px;
+  font-size: clamp(1.5rem, 0.9761rem + 1.1191vw, 2.375rem);  
   text-decoration: none;
   color: #E0CEA0;
+}
+
+.header-logo__mobile {
+  display: none;
 }
 
 .header-content {
   display: flex;
   gap: 10px;
+  justify-content: end;
+  gap: 56px;
 }
 
 .header-nav {
   display: flex;
   gap: 26px;
-  margin-right: 100px;
   align-items: center;
 }
 
@@ -48,5 +54,76 @@ nav a:hover {
   font-size: 20px;
 }
 
+@media (max-width: 749px) {
+
+  }
+
+
+
+/* RESPONSIVE */
+@media (min-width: 990px) and (max-width: 1440px) {
+  header {
+    padding: 20px 60px;
+  }
+}
+
+@media (min-width: 749px) and (max-width: 989px) {
+  header {
+    padding: 16px 40px;
+  }
+}
+
+@media (max-width: 749px) {
+  header {
+    padding: 16px 20px;
+  }
+
+  .header-logo {
+    display: block;
+    width: 40px;
+    height: auto;
+    padding-left: 46px;
+  }
+
+  .header-content {
+    gap: 36px;
+  }
+
+  .img-rupia {
+    width: 20px;
+    height: 20px;
+  }
+
+  .user-money {
+    padding-right: 46px;
+  }
+
+  .user-money p  {
+    font-size: clamp(1.5rem, 0.9761rem + 1.1191vw, 2.375rem);
+ }
+
+  .header-nav a {
+    font-size: 18px;
+    flex: 1;
+    text-align: center;
+    font-size: 16px;
+    color: white; /* o tu color de marca */
+    text-decoration: none;
+  }
+
+  .header-nav {
+    position: fixed;
+    bottom: 0;
+    left: 0;
+    width: 100%;
+    background: rgb(13, 31, 46);
+    padding: 10px 0;
+    justify-content: space-around;
+    z-index: 1000;
+    gap: 0;
+  }
+
+
+}
 
 
