--- a/src/components/button/button.css
+++ b/src/components/button/button.css
@@ -14,7 +14,7 @@
     justify-content: center;
     position: relative;
     width: fit-content;
-    min-width: 160px;
+    min-width: 130px;
     background-color: white;
     border: none;
     background-color: transparent;
@@ -73,12 +73,12 @@
 
 .button.md {
     --cut-size: var(--cut-size-md);
-    height: 48px;
+    height: 38px;
     padding: 0 24px;
     font-size: 20px;
 }
 
- @media (min-width: 769px) and (max-width: 1439px) {
+ @media (min-width: 751px) and (max-width: 1439px) {
     .button.md {
         font-size: 16px;
     }
@@ -101,12 +101,25 @@
     }
 }
 
-@media (min-width: 769px) and (max-width: 1439px) {
+@media (min-width: 1025px) and (max-width: 1600px) {
     .button.lg {
-        height: 58px;
+        height: 52px;
         padding: 0 12px;
         font-size: 20px;
-        min-width: 240px;
+        min-width: 220px;
+    }
+}
+
+@media (max-width: 1024px) {
+    .button.lg {
+        height: 38px;
+        padding: 0 4px;
+        min-width: 100px;
+        font-size: 12px;
+    }   
+
+        & .button-corner {
+            width: 14px;
     }
 }
 
@@ -330,7 +343,7 @@
 
 .button.outlined {
     color: white;
-    background-color: #111e2c;
+    background-color: rgba(28, 67, 98, 1);
     transition: box-shadow 0.3s ease-in-out;
 }
 
@@ -343,7 +356,6 @@
     right: 0;
     width: 1px;
     height: 25%;
-    background-color: #7CD2FF;
 }
 
 .button.outlined .left-line-top,
@@ -352,7 +364,6 @@
     left: 0;
     width: 1px;
     height: 25%;
-    background-color: #7CD2FF;
 }
 
 .button.outlined .right-line-top, 
@@ -369,46 +380,41 @@
 
 /* Top left */
 .button.outlined .top-line-left {
-    position: absolute;
     top: 0;
     left: 0;
     width: 18%; /* no llega al centro */
     height: 1px;
-    background-color: #7CD2FF;
 }
 
 /* Top right */
 .button.outlined .top-line-right {
-    position: absolute;
     top: 0;
     right: 0;
     width: 18%;
     height: 1px;
-    background-color: #7CD2FF;
 }
 
 /* Bottom left */
 .button.outlined .bottom-line-left {
-    position: absolute;
     bottom: 0;
     left: 0;
     width: 18%;
     height: 1px;
-    background-color: #7CD2FF;
+  
 }
 
 /* Bottom right */
 .button.outlined .bottom-line-right {
-    position: absolute;
     bottom: 0;
     right: 0;
     width: 18%;
     height: 1px;
-    background-color: #7CD2FF;
+    
 }
 
 .button.outlined:hover {
-    box-shadow: 0 0 8px 2px rgba(255, 255, 255, 0.7);
+    box-shadow: 0px 0px 15px 0px rgba(124, 210, 255, 1);
+
 }
 
 .bottom-line-right,
@@ -419,7 +425,9 @@
 .right-line-bottom,
 .left-line-top,
 .left-line-bottom {
-  transition: width 0.3s ease-in-out, height 0.3s ease-in-out;
+    position: absolute;
+    transition: width 0.3s ease-in-out, height 0.3s ease-in-out;
+    background-color: #ffffff;
 }
 
   .button.outlined:hover .bottom-line-right,
@@ -457,8 +465,7 @@
     display: flex;
     flex-direction: column;
     justify-content: center;
-    gap: 6px;
-
+    gap: 8px;
     opacity: 0;
     transform: translate(-50%, -10px); 
     visibility: hidden;
@@ -479,11 +486,7 @@
 }
   
   .dropdown-button__option {
-    background-color: #275880; 
-    border: 1px solid #7CD2FF; 
-    color: white; 
     padding: 8px 16px; 
-    margin-top: 16px;
     text-align: center;
     font-size: 14px; 
     cursor: pointer;
@@ -491,13 +494,20 @@
     height: 36px; 
     transition: background-color 0.2s ease, border-color 0.2s ease;
     font-weight: bold;
+    color: #275880; 
+    background-color: white; 
+  }
+
+  .dropdown-button__option:first-of-type {
+    margin-top: 6px;
   }
 
   .dropdown-button__option:hover {
     box-shadow: 0 0 8px 2px rgba(255, 255, 255, 0.7);
-    color: #275880; 
-    background-color: white; 
 
+    background-color: #275880; 
+    border: 1px solid #7CD2FF; 
+    color: white; 
   }
 
   .dropdown-icon {
