--- a/src/components/collectionAll/collection-all.css
+++ b/src/components/collectionAll/collection-all.css
@@ -8,14 +8,24 @@ html {
     gap: 60px;
     justify-items: center; 
     width: 100%;
+    max-width: 100vw;
     justify-content: center;
 }
 
-@media (min-width: 769px) and (max-width: 1439px) {
+@media (min-width: 750px) and (max-width: 1439px) {
     .collection-container {
         gap: 30px;
     }
 }
+
+@media (max-width: 1024px) {
+    .collection-container {
+        gap: 20px;
+        display: grid;
+        grid-template-columns: 1fr 1fr 1fr;
+    }
+}
+
 
 .hyrule-card__border:hover {
     cursor: pointer;
@@ -28,6 +38,12 @@ html {
     gap: 25px;
 }
 
+@media (max-width: 1024px) {
+    .cards-wrapped {
+        flex-direction: column-reverse;
+    }
+}
+
 .collection-page {
     display: grid;
     grid-template-columns: 1fr 3fr;
@@ -38,6 +54,14 @@ html {
     position: relative;
 }
 
+@media (max-width: 1024px) {
+    .collection-page {
+       grid-template-columns: 1fr;
+       column-gap: 0;
+       row-gap: 36px;
+       margin-top: 26px;
+    }
+}
 
 .collection-page__buttons {
     display: flex;
@@ -47,6 +71,16 @@ html {
     top: 230px;
     height: fit-content;
     padding: 0 27px;
+}
+
+@media (max-width: 1024px) {
+    .collection-page__buttons {
+        display: flex;
+        flex-direction: row;
+        justify-content: center;
+        padding: 0 0;
+        top: 190px;
+    }
 }
 
 /* Gif  */
@@ -77,3 +111,14 @@ html {
     color: white;
     font-size: 16px;
 }
+
+   @media (max-width: 1024px) {
+        :root {
+            width: 100vw;
+        }
+
+        .test {
+           width: 120px; 
+           height: 147px;
+        }
+    }
