--- a/src/components/collectionAll/collection-all.css
+++ b/src/components/collectionAll/collection-all.css
@@ -12,13 +12,13 @@ html {
     justify-content: center;
 }
 
-@media (min-width: 750px) and (max-width: 1439px) {
+@media (min-width: 750px) and (max-width: 1124px) {
     .collection-container {
         gap: 30px;
     }
 }
 
-@media (max-width: 1024px) {
+@media (max-width: 749px) {
     .collection-container {
         gap: 20px;
         display: grid;
@@ -38,7 +38,7 @@ html {
     gap: 25px;
 }
 
-@media (max-width: 1024px) {
+@media (max-width: 1124px) {
     .cards-wrapped {
         flex-direction: column-reverse;
     }
@@ -54,7 +54,7 @@ html {
     position: relative;
 }
 
-@media (max-width: 1024px) {
+@media (max-width: 1124px) {
     .collection-page {
        grid-template-columns: 1fr;
        column-gap: 0;
@@ -73,13 +73,19 @@ html {
     padding: 0 27px;
 }
 
-@media (max-width: 1024px) {
+@media (max-width: 1124px) {
     .collection-page__buttons {
         display: flex;
         flex-direction: row;
         justify-content: center;
         padding: 0 0;
         top: 190px;
+    }
+}
+
+@media (max-width: 749px) {
+    .collection-page__buttons {
+        gap: 18px;
     }
 }
 
@@ -112,7 +118,7 @@ html {
     font-size: 16px;
 }
 
-   @media (max-width: 1024px) {
+   @media (max-width: 1124px) {
         :root {
             width: 100vw;
         }
