--- a/src/views/collection/DecksPage.css
+++ b/src/views/collection/DecksPage.css
@@ -48,6 +48,7 @@
     letter-spacing: 0.2rem;
     align-items: center;
     justify-content: center;
+    text-align: center;
     color: #7CD2FF;
     text-shadow: 0px 0px 4px #96cefc;
     word-wrap: break-word;
