feature: responsive store page feature: slider store page

--- a/src/components/chest-button/ChestButton.css
+++ b/src/components/chest-button/ChestButton.css
@@ -45,6 +45,8 @@
     justify-content: center;
     align-content: center;
     object-fit: cover;
+    /* user-drag: none; */
+    -webkit-user-drag: none;
 }
 
 .chest-button__text h3 {
@@ -66,3 +68,38 @@
 .chest-button__text__epic {
     color: #BA6ED5;
 }
+
+.chest-price__content {
+    display: flex;
+    align-content: center;
+    justify-content: center;
+    align-items: center;
+    gap: 6px;
+}
+
+.chest-price__content p {
+    font-size: 18px;
+    color: white;
+}
+
+    @media (max-width: 1124px) {
+        .chest-button {
+            width: 18rem;
+            height: 32rem;
+        }
+
+        .chest-button__img {
+            width: 18rem;
+            height: 18rem;
+    }
+
+        .chest-button h1, h2 {
+            font-size: 1.7rem;
+        }
+
+        .chest-rupia-icon {
+            width: 18px;
+            height: 18px;
+        }
+}
+
