--- a/src/components/store-purchase/StorePurchase.css
+++ b/src/components/store-purchase/StorePurchase.css
@@ -31,6 +31,8 @@
 
 .store-purchase__info h2 {
     font-size: 1.5rem;
+    display: flex;
+    justify-content: center;
 }
 
 .store-purchase__info p, li{
