--- a/src/components/store-main/StoreMain.css
+++ b/src/components/store-main/StoreMain.css
@@ -3,8 +3,9 @@
     flex-direction: row;
     justify-content: center;
     align-items: center;
-    gap: 3rem;
-    margin-top: 4rem;
+    gap: 6rem;
+    margin-top: 11rem;
+    overflow: visible;
 }
 
 .store-main__textbox__text {
@@ -22,7 +23,7 @@
     flex-direction: column;
     align-items: center;
     gap: 1rem;
-    margin-top: 2.5rem;
+    margin-top: 5.6rem;
     justify-content: center;
 }
 
@@ -31,3 +32,31 @@
     margin-top: 2rem;
     gap: 2.5rem
 }
+
+.store-main .card-content {
+    cursor: pointer;
+}
+
+.store-main.dragging {
+  cursor: grabbing;
+  user-select: none;
+}
+
+    @media (max-width: 764px) {
+        .store-main {
+            display: flex;
+            overflow-x: auto;
+            padding: 3rem 7rem;
+            justify-content: unset;
+            scroll-snap-type: x mandatory;
+            -webkit-overflow-scrolling: touch;
+            touch-action: pan-x;
+            gap: 4rem;
+            padding-inline: 1rem;
+            scroll-padding-inline: 1rem;
+            scrollbar-width: none;
+            user-select: none;
+        }
+
+   
+    }
